--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
 <body>
     <header>
-        <h1>What is the Weather?</h1>
+        <div class="hero hero-background">
+            <h1>What is the Weather?</h1>
+        </div>
     </header>
     <div class="citySearch">
         <aside>
