--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <div class="citySearch">
         <aside>
-            <div class="flex justify-center">
+            <div class="flex">
                 <h2>Search with City Name</h2>
                 <div class="searchForm">
                     <form class="searchHistory">
